# DNS_Relayer

./: .gitignore  CMakeLists.txt  cli.c  dns_test.py  dns_test_compare.sh  man.txt  readme.md  relayer.c  server.c  test.c
cache/: cache.c  hash.c  linkList.c
doc/: Arg.md  Cache.md  DNS_message.md  Thread_pool.md
doc/img/: cache.drawio
include/: arg.h  cache.h  clog.h  file_reader.h  hash.h  linkList.h  log.h  message.h  thread_pool.h  wrap.h
message/: message.c
pool/: queue.c  thread_pool.c
test/: file_reader_test.c  test.c
tool/: arg.c  clog.c  file_reader.c  log.c  wrap.c
